--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@nestjs/cli": "^8.2.2",
+    "@nestjs/typeorm": "^8.0.3",
     "bcrypt": "^5.0.1",
     "jwt-check-expiration": "^1.0.5",
-    "jwt-decode": "^3.1.2"
+    "jwt-decode": "^3.1.2",
+    "pg": "^8.7.3",
+    "sqlite3": "^5.0.2",
+    "typeorm": "^0.2.45"
   }
 }
